--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,9 @@
-FROM python:3.11-slim
+FROM python:3.11-slim 
 
-WORKDIR /app
+WORKDIR /app           
+
+RUN apt-get update && apt-get install -y libgl1 \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
