--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,10 @@ FROM python:3.11-slim
 
 WORKDIR /app           
 
-RUN apt-get update && apt-get install -y libgl1 \
+# Install required system libraries
+RUN apt-get update && apt-get install -y \
+    libgl1 \
+    libglib2.0-0 \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
