--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,18 +2,19 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install required system libraries
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     libgl1 \
     libglib2.0-0 \
+    build-essential \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements and install dependencies
+# Install Python dependencies
 COPY requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
-# Copy the rest of the app code
+# Copy app code
 COPY . .
 
-# Run the app with a single Gunicorn worker to reduce memory usage
+# Run the app using Gunicorn with a single worker
 CMD ["gunicorn", "-w", "1", "-b", "0.0.0.0:10000", "app:app"]
