--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,5 @@
 flask==2.3.2
-torch==2.2.2
-torchvision==0.17.2
-facenet-pytorch==2.5.3
-Pillow==10.3.0
-gunicorn==21.2.0
-numpy==1.26.4
+gunicorn==20.1.0
+face_recognition==1.3.0
+numpy==1.24.3
+pillow==9.5.0
