--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,9 @@
 FROM python:3.11-slim
 
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+ENV PORT=10000
+
 WORKDIR /app
 
 COPY requirements.txt .
@@ -7,4 +11,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+
+EXPOSE 10000
+
+# Start the app
 CMD ["gunicorn", "-w", "1", "--threads", "2", "-b", "0.0.0.0:10000", "app:app"]
